<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUpPageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create an account" />

        <EditText
            android:id="@+id/signUpfirstNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="first name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signUplastNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="last name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signUpemailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signUppasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="password"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/signUproleTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SignUp" />

        <TextView
            android:id="@+id/loginHereText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login here" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>