<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginPageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Page" />

        <EditText
            android:id="@+id/loginemailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginpasswordTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="password"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login" />

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="create new account here" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>